--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "rollup": "^2.23.0"
   },
   "dependencies": {
+    "@rollup/plugin-json": "^4.1.0",
+    "leaflet": "^1.6.0",
     "rollup-plugin-css-only": "^2.1.0",
     "rollup-plugin-terser": "^6.1.0"
   }
