--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "ol": "^6.4.2",
     "proj4": "^2.6.2",
     "rollup-plugin-css-only": "^2.1.0",
-    "rollup-plugin-terser": "^6.1.0"
+    "rollup-plugin-string": "^3.0.0",
+    "rollup-plugin-terser": "^6.1.0",
+    "twgl.js": "^4.15.2"
   }
 }
